--- a/Ch3 JSTL/pom.xml
+++ b/Ch3 JSTL/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Ch2Test</groupId>
-  <artifactId>Ch2Test</artifactId>
+  <groupId>Ch3JSTL</groupId>
+  <artifactId>Ch3JSTL</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <build>
@@ -23,8 +23,7 @@
       </plugin>
     </plugins>
   </build>
-  
-  <dependencies>
+   <dependencies>
   
   <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 	<dependency>
@@ -41,5 +40,4 @@
 	</dependency>
 	
   </dependencies>
-  
 </project>
