--- a/2021test/pom.xml
+++ b/2021test/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>2021CampJsp</groupId>
-  <artifactId>2021CampJsp</artifactId>
+  <groupId>2021test</groupId>
+  <artifactId>2021test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <build>
@@ -22,7 +22,6 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         	
         </configuration>
-      
       </plugin>
     </plugins>
   </build>
