--- a/bookclass/pom.xml
+++ b/bookclass/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>2021CampJsp</groupId>
-  <artifactId>2021CampJsp</artifactId>
+  <groupId>bookclass</groupId>
+  <artifactId>bookclass</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <build>
@@ -22,11 +22,10 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         	
         </configuration>
-      
       </plugin>
     </plugins>
   </build>
-  <dependencies>
+    <dependencies>
   
   <!-- https://mvnrepository.com/artifact/servlets.com/cos -->
 	<dependency>
@@ -50,5 +49,4 @@
 	</dependency>
   
   </dependencies>
-  
 </project>
